--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/server/index.js",
-    "nodemon": "nodemon --watch build/server --watch build/lib --inspect -- build/server/index.js",
+    "nodemon": "nodemon --watch build/config --watch build/server --watch build/lib --inspect -- build/server/index.js",
     "build": "gulp build",
     "watch": "gulp watch"
   },
@@ -18,11 +18,13 @@
   "dependencies": {
     "body-parser": "1.16.1",
     "express": "4.14.1",
-    "morgan": "1.8.1"
+    "morgan": "1.8.1",
+    "yaml": "0.3.0"
   },
   "devDependencies": {
     "babel-core": "6.23.1",
     "babel-preset-es2015": "6.22.0",
+    "babel-preset-stage-0": "6.22.0",
     "del": "2.2.2",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
