--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "1.16.1",
     "express": "4.14.1",
     "morgan": "1.8.1",
+    "uuid": "3.0.1",
     "yaml": "0.3.0"
   },
   "devDependencies": {
