--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "deploy",
-  "version": "1.0.0",
-  "description": "Webhook server to trigger custom shell scripts.",
+  "name": "hooksh",
+  "version": "0.1.0",
+  "description": "Webhook for shell scripts",
   "main": "index.js",
   "engines": {
     "node": "7.5.0"
@@ -13,8 +13,8 @@
     "build": "gulp build",
     "watch": "gulp watch"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Draltan Marin <draltan.marin@kwenzi.com>",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "1.16.1",
     "express": "4.14.1",
