--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "engines": {
     "node": "7.5.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kwenzi/hooksh.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/server/index.js",
-    "nodemon": "nodemon --watch build/config --watch build/server --watch build/lib --inspect -- build/server/index.js",
+    "nodemon": "nodemon --watch build/config --watch build/server --watch build/lib --inspect -- build/server/index.js ./config",
     "build": "gulp build",
     "watch": "gulp watch"
   },
@@ -17,6 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.16.1",
+    "chokidar": "1.6.1",
+    "commander": "2.9.0",
     "express": "4.14.1",
     "morgan": "1.8.1",
     "uuid": "3.0.1",
